--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,6 +20,13 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer">
+        
+        <ExpandableListView
+            android:id="@+id/experience_list"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        
+    </android.support.design.widget.NavigationView>
 
 </android.support.v4.widget.DrawerLayout>
