--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorAccent">#2196F3</color>
 
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorStatusBar">#10000000</color>
