--- a/app/src/main/res/layout/experience_item.xml
+++ b/app/src/main/res/layout/experience_item.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="@dimen/experience_item_height"
+    android:layout_marginBottom="@dimen/experience_item_vertical_margin"
+    android:layout_marginLeft="@dimen/experience_item_horizontal_margin"
+    android:layout_marginRight="@dimen/experience_item_horizontal_margin"
+    android:layout_marginTop="@dimen/experience_item_vertical_margin"
+    android:elevation="@dimen/experience_item_elevation">
 
 </android.support.v7.widget.CardView>
