--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,45 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/experience_item_vertical_margin"
-    android:layout_marginLeft="@dimen/experience_item_horizontal_margin"
-    android:layout_marginRight="@dimen/experience_item_horizontal_margin"
-    android:layout_marginTop="@dimen/experience_item_vertical_margin"
-    android:elevation="@dimen/experience_item_elevation"
-    android:minHeight="@dimen/experience_item_height">
+    android:layout_height="@dimen/message_item_height"
+    android:id="@+id/item_message"
+    android:background="?selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/experience_item_header_height"
+            android:layout_height="78dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/experience_item_header_padding"
-            android:paddingStart="@dimen/experience_item_header_padding"
-            tools:ignore="RtlSymmetry,UselessParent">
+            android:padding="@dimen/message_item_padding">
+
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
 
                 <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/avatar"
-                    android:layout_width="@dimen/experience_item_header_avatar_dimen"
-                    android:layout_height="@dimen/experience_item_header_avatar_dimen"
+                    android:id="@+id/simpleDraweeView"
+                    android:layout_width="@dimen/message_item_avatar_dimen"
+                    android:layout_height="@dimen/message_item_avatar_dimen"
                     app:layout_constraintStart_toEndOf="parent"
                     app:placeholderImage="@color/placeholderImage"
                     app:roundedCornerRadius="@dimen/message_item_avatar_corner_radius"
                     app:roundingBorderColor="@color/white" />
 
                 <com.facebook.drawee.view.SimpleDraweeView
-                    android:id="@+id/stateConnection"
                     android:layout_width="@dimen/message_item_state_connection"
                     android:layout_height="@dimen/message_item_state_connection"
                     android:layout_centerHorizontal="true"
@@ -56,34 +52,38 @@
                     app:roundingBorderWidth="@dimen/message_item_state_connection_border"
                     tools:ignore="MissingConstraints" />
 
-
             </android.support.constraint.ConstraintLayout>
 
-            <TextView
-                android:textSize="@dimen/experience_item_username_size"
-                android:layout_margin="@dimen/experience_item_username_margin"
-                android:id="@+id/username"
-                android:text="Username"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:paddingLeft="10dp"
+                android:paddingTop="6dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Lauren Steven Montenegro"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Texto del mensaje. Lorem ipsum dolor "
+                    android:textColor="#8c8c8c"
+                    android:textSize="12sp" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-        <com.facebook.drawee.view.SimpleDraweeView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/experience_item_image_height"
-            app:placeholderImage="@color/placeholderImage" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/experience_item_content_height"
-            android:orientation="vertical">
-
-
-        </LinearLayout>
+            android:layout_height="1dp"
+            android:background="#d6d6d6" />
 
     </LinearLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
