--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorPrimaryDark">#1976D2</color>
+    <color name="colorPrimary">#0274df</color>
+    <color name="colorPrimaryDark">#005aae</color>
     <color name="colorAccent">#2196F3</color>
 
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorStatusBar">#10000000</color>
+
+    <!-- Reusable colors -->
+    <color name="activeState">#00ff00</color>
+    <color name="inactiveState">#ff0004</color>
+    <color name="placeholderImage">#c4c4c4</color>
+
+    <!-- basic colors -->
+    <color name="white">#FFFFFF</color>
 </resources>
