--- a/app/src/main/res/drawable/header_nav_background.xml
+++ b/app/src/main/res/drawable/header_nav_background.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="90"
+        android:angle="135"
         android:endColor="#2fb8f7"
-        android:startColor="#0265df"
+        android:centerColor="#0274df"
+        android:startColor="#1b64b3"
         android:type="linear" />
-
 </shape>
