--- a/app/src/main/res/drawable/login_button_styles.xml
+++ b/app/src/main/res/drawable/login_button_styles.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorPrimary" />
 
-    <size android:height="1dp" />
+    <gradient
+        android:angle="0"
+        android:endColor="#2fb8f7"
+        android:startColor="#028edf" />
 
     <padding
-        android:bottom="0dp"
-        android:left="15dp"
-        android:right="15dp"
-        android:top="0dp" />
+        android:bottom="10dp"
+        android:left="25dp"
+        android:right="25dp"
+        android:top="10dp" />
 
-    <corners android:radius="3dp" />
+    <corners android:radius="30dp" />
 </shape>
