--- a/app/src/main/res/drawable/toolbar_color.xml
+++ b/app/src/main/res/drawable/toolbar_color.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:angle="90"
-        android:endColor="#2fb8f7"
-        android:startColor="#0265df"
-        android:type="linear" />
 
+    <gradient
+        android:angle="0"
+        android:endColor="#2fb8f7"
+        android:startColor="#0271df" />
 </shape>
