--- a/app/src/main/res/layout/activity_detail_message.xml
+++ b/app/src/main/res/layout/activity_detail_message.xml
@@ -13,20 +13,22 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
+            android:background="@drawable/toolbar_color"
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            app:contentInsetStartWithNavigation="0dp"
             app:popupTheme="@style/AppTheme.PopupOverlay">
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="wrap_content"
-                android:padding="0dp"
                 android:layout_height="wrap_content">
 
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/avatar"
-                    android:layout_width="@dimen/message_item_avatar_dimen"
-                    android:layout_height="@dimen/message_item_avatar_dimen"
+                    android:layout_width="@dimen/message_detail_avatar_dimen"
+                    android:layout_height="@dimen/message_detail_avatar_dimen"
                     app:layout_constraintStart_toEndOf="parent"
                     app:placeholderImage="@color/placeholderImage"
                     app:roundedCornerRadius="@dimen/message_item_avatar_corner_radius"
@@ -56,7 +58,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:text="Lauren Steven..."
+                android:text="Lauren"
+                android:textSize="16sp"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
 
@@ -65,5 +68,49 @@
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_detail_message" />
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/white"
+            android:elevation="6dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="6dp">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="?selectableItemBackground"
+                android:src="@drawable/ic_menu_camera" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="?selectableItemBackground"
+                android:src="@drawable/ic_menu_gallery" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:background="?selectableItemBackground"
+                android:src="@drawable/ic_mic_black_24dp" />
+
+            <EditText
+                android:textSize="12sp"
+                android:text="Escribir mensaje"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.design.widget.CoordinatorLayout>
