--- a/app/src/main/res/layout/content_detail_message.xml
+++ b/app/src/main/res/layout/content_detail_message.xml
@@ -9,45 +9,10 @@
     tools:showIn="@layout/activity_detail_message">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_marginBottom="45dp"
+        android:paddingBottom="1dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            android:elevation="6dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:padding="6dp">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="?selectableItemBackground"
-                android:src="@drawable/ic_menu_camera" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="?selectableItemBackground"
-                android:src="@drawable/ic_menu_gallery" />
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:background="?selectableItemBackground"
-                android:src="@drawable/ic_mic_black_24dp" />
-
-        </LinearLayout>
-    </RelativeLayout>
 
 </FrameLayout>
