--- a/app/src/main/res/layout/experience_item.xml
+++ b/app/src/main/res/layout/experience_item.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="@dimen/experience_item_corner_radius"
     android:layout_marginBottom="@dimen/experience_item_vertical_margin"
     android:layout_marginLeft="@dimen/experience_item_horizontal_margin"
     android:layout_marginRight="@dimen/experience_item_horizontal_margin"
     android:layout_marginTop="@dimen/experience_item_vertical_margin"
-    android:elevation="@dimen/experience_item_elevation"
+    app:cardElevation="@dimen/experience_item_elevation"
     android:minHeight="@dimen/experience_item_height">
 
     <LinearLayout
@@ -60,10 +61,10 @@
             </android.support.constraint.ConstraintLayout>
 
             <TextView
+                android:id="@+id/username"
                 android:textSize="@dimen/experience_item_username_size"
                 android:layout_margin="@dimen/experience_item_username_margin"
-                android:id="@+id/username"
-                android:text="Username"
+                android:text="Lauren Steven Montenegro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -80,7 +81,6 @@
             android:layout_height="wrap_content"
             android:minHeight="@dimen/experience_item_content_height"
             android:orientation="vertical">
-
 
         </LinearLayout>
 
