--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -14,7 +14,10 @@
         android:icon="@drawable/ic_chat_black_24dp"
         android:title="Chat" />
 
-
+        <item
+            android:id="@+id/nav_users"
+            android:icon="@drawable/ic_contacts_black_24dp"
+            android:title="Estudiantes" />
     </group>
 
     <item android:title="@string/activity_main_drawer_subsection_title">
