--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -139,7 +139,7 @@
                         </android.support.design.widget.TextInputLayout>
 
                         <Button
-                            android:id="@+id/login"
+                            android:id="@+id/buttom_login"
                             android:layout_width="wrap_content"
                             android:layout_height="40dp"
                             android:layout_gravity="center"
