--- a/app/src/main/res/drawable/dialog_gradient_background.xml
+++ b/app/src/main/res/drawable/dialog_gradient_background.xml
@@ -4,7 +4,7 @@
     <gradient
         android:angle="90"
         android:endColor="#2fb8f7"
-        android:startColor="#0265df"
+        android:startColor="#2079a6"
         android:type="linear" />
 
 </shape>
