--- a/app/src/main/res/drawable/login_button_styles.xml
+++ b/app/src/main/res/drawable/login_button_styles.xml
@@ -4,8 +4,8 @@
 
     <gradient
         android:angle="0"
-        android:endColor="#2fb8f7"
-        android:startColor="#028edf" />
+        android:endColor="#028edf"
+        android:startColor="#2fb8f7" />
 
     <padding
         android:bottom="10dp"
