--- a/app/src/main/res/layout/activity_detail_message.xml
+++ b/app/src/main/res/layout/activity_detail_message.xml
@@ -58,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
-                android:text="Lauren"
+                android:text="@string/username_string"
                 android:textSize="16sp"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
