--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:fitsSystemWindows="true"
     tools:context="techo.apps.isi.uca.com.android_aps.ui.activities.LoginActivity">
 
     <ScrollView
@@ -18,143 +19,93 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RelativeLayout
+
+            <LinearLayout
+                android:id="@+id/activity_login_content"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/activity_login_header_height">
+                android:layout_height="544dp"
+                android:layout_margin="15dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/activity_login_content_padding"
+                android:paddingRight="@dimen/activity_login_content_padding">
+                <ImageView
+                    android:layout_width="171dp"
+                    android:layout_height="@dimen/activity_login_header_height"
+                    android:src="@drawable/logo_aps"
+                    android:elevation="@dimen/activity_login_bottom_layout_elevation"
+                    android:layout_marginBottom="@dimen/activity_login_bottom_layout_margin"
+                    android:layout_margin="80dp"/>
 
-                <com.facebook.drawee.view.SimpleDraweeView
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
-                    app:backgroundImage="@drawable/figure_art_one" />
 
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <RelativeLayout
+                <TextView
+                    android:text="@string/activity_login_username_hint"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true">
-
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:layout_width="150dp"
-                        android:layout_height="150dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_marginBottom="59dp"
-                        android:layout_marginLeft="3dp"
-                        android:layout_marginStart="3dp"
-                        app:backgroundImage="@drawable/figure_art_one" />
-
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_alignParentTop="true"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginRight="5dp"
-                        android:layout_marginTop="54dp"
-                        app:backgroundImage="@drawable/figure_art_one" />
-
-                    <com.facebook.drawee.view.SimpleDraweeView
-                        android:layout_width="70dp"
-                        android:layout_height="70dp"
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginBottom="13dp"
-                        android:layout_marginEnd="5dp"
-                        android:layout_marginRight="5dp"
-                        app:backgroundImage="@drawable/figure_art_one" />
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textView3"
+                    android:typeface="sans"
+                    android:textColor="@color/login_edit_text_color"
+                    android:textSize="16sp"
+                    android:layout_margin="3dp"/>
 
 
-                </RelativeLayout>
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_login_bottom_layout_height"
+                    android:layout_margin="3dp"
+                    android:textColor="@color/login_edit_text_color"
+                    android:background="@drawable/input_styles"
+                    android:textSize="16sp"/>
 
-                <RelativeLayout
+
+                <TextView
+                    android:text="@string/activity_login_password_hint"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/text_password"
+                    android:typeface="sans"
+                    android:textColor="@color/login_edit_text_color"
+                    android:textSize="16sp"
+                    android:layout_margin="5dp"/>
+
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_login_bottom_layout_height"
+                    android:inputType="textPassword"
+                    android:textColor="@color/login_edit_text_color"
+                    android:background="@drawable/input_styles"
+                    android:textSize="16sp"/>
+
+
+                <Button
+                    android:id="@+id/buttom_login"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/activity_login_bottom_layout_height"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="30dp"
+                    android:background="@drawable/login_button_styles"
+                    android:text="@string/activity_login_button_text"
+                    android:textColor="@color/colorBackground"
+                    android:textSize="16sp"/>
+                <Button
+                    android:id="@+id/recovery"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="40dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="35dp"
+                    android:background="@android:color/transparent"
+                    android:text="@string/question_lose_account"
+                    android:textColor="@color/login_edit_text_color"
+                    android:textSize="14sp"/>
 
-                    <LinearLayout
-                        android:id="@+id/activity_login_content"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="15dp"
-                        android:background="@drawable/login_container"
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:paddingLeft="@dimen/activity_login_content_padding"
-                        android:paddingRight="@dimen/activity_login_content_padding">
 
-                        <com.facebook.drawee.view.SimpleDraweeView
-                            android:layout_width="80dp"
-                            android:layout_height="80dp"
-                            android:layout_gravity="center"
-                            android:layout_marginBottom="20dp"
-                            android:layout_marginTop="35dp"
-                            app:backgroundImage="@drawable/logo_aps" />
+            </LinearLayout>
 
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/activity_login_text_input_layout_margin"
-                            android:theme="@style/TextLabel">
 
-                            <EditText
-                                android:id="@+id/username"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/activity_login_username_hint"
-                                android:inputType="textEmailAddress"
-                                android:textColor="@color/textColor"
-                                android:textSize="16sp" />
 
-                        </android.support.design.widget.TextInputLayout>
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="@dimen/activity_login_text_input_layout_margin"
-                            android:theme="@style/TextLabel">
-
-                            <EditText
-                                android:id="@+id/password"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:hint="@string/activity_login_password_hint"
-                                android:inputType="textPassword"
-                                android:textColor="@color/textColor"
-                                android:textSize="16sp" />
-
-                        </android.support.design.widget.TextInputLayout>
-
-                        <Button
-                            android:id="@+id/buttom_login"
-                            android:layout_width="wrap_content"
-                            android:layout_height="40dp"
-                            android:layout_gravity="center"
-                            android:layout_marginBottom="35dp"
-                            android:layout_marginTop="15dp"
-                            android:background="@drawable/login_button_styles"
-                            android:text="@string/activity_login_button_text"
-                            android:textColor="@color/colorBackground"
-                            android:textSize="14sp" />
-
-                    </LinearLayout>
-
-                </RelativeLayout>
-
-            </RelativeLayout>
 
 
         </LinearLayout>
