--- a/app/src/main/res/layout/dialog_profile_placeholder.xml
+++ b/app/src/main/res/layout/dialog_profile_placeholder.xml
@@ -63,7 +63,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Lauren Steven Montenegro"
+                android:text="@string/username_string"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 android:textStyle="bold" />
