--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -66,7 +66,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Lauren Steven Montenegro"
+                    android:text="@string/username_string"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold" />
 
