Room Database, Dagger implementation, Butter Knife implementation, SyncUpDialog (People)

--- a/app/src/main/res/layout/content_detail_message.xml
+++ b/app/src/main/res/layout/content_detail_message.xml
@@ -8,7 +8,7 @@
     tools:context="techo.apps.isi.uca.com.android_aps.ui.activities.DetailMessageActivity"
     tools:showIn="@layout/activity_detail_message">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_marginBottom="45dp"
         android:paddingBottom="1dp"
