--- a/app/src/main/res/layout/fragment_experience.xml
+++ b/app/src/main/res/layout/fragment_experience.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="techo.apps.isi.uca.com.android_aps.ui.fragments.ExperienceFragment">
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
