Add: feature view bigger profile picture

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="login_edit_text_color">#01afff</color>
 
 
-    <color name="textColor">#595959</color>
+    <color name="textColor1">#595959</color>
     <color name="colorBackground">#ffffff</color>
     <color name="colorStatusBar">#10000000</color>
 
