--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="techo.apps.isi.uca.com.android_aps.ui.activities.ProfileActivity"
     android:orientation="vertical">
 
@@ -21,6 +19,20 @@
             android:orientation="vertical"
             android:gravity="top"
             android:background="@drawable/gradientbackground">
+
+            <LinearLayout
+                android:layout_margin="5dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp" >
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:src="@drawable/ic_settings"
+                    android:id="@+id/add_image_menu"/>
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="150dp"
